# amDCT

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  Source_License_Info.txt
amDCT/: Adapt.c  Adapt.h  BuildPerBlockMatrix.c  BuildPerBlockMatrix.cpp  BuildPerBlockMatrix.h  BuildPreCompVals.c  BuildPreCompVals.cpp  BuildPreCompVals.h  CMakeLists.txt  DctLoop.c  DctLoop.cpp  DctLoop.h  DispatchLoop.c  DispatchLoop.cpp  DispatchLoop.h  Files.cmake  FitRange.c  FitRange.h  Font.h  FrameInfo.c  FrameInfo.h  LumaBlockInfo.c  LumaBlockInfo.cpp  LumaBlockInfo.h  LumaFrameInfo.c  LumaFrameInfo.h  Matrix.c  Matrix.cpp  Matrix.h  MaxMinFilter.c  MaxMinFilter.cpp  MaxMinFilter.h  Memory.c  Memory.cpp  Memory.h  Sharp.c  Sharp.cpp  Sharp.h  Threading.c  Threading.cpp  (+28 more)
amDCT/dct/: fdct.c  fdct.h  fdct_sse2.c  fdct_sse2.cpp  idct.c  idct.cpp  idct.h  idct_sse2.c  idct_sse2.cpp  simple_idct.c  simple_idct.cpp
amDCT/quant/: SMD_quant_mpeg.c  SMD_quant_mpeg.h  quant.h  quant_h263.c  quant_h263_sse.c  quant_h263_sse.cpp  quant_matrix.c  quant_matrix.cpp  quant_matrix.h  quant_mpeg.c  quant_mpeg.c_original_code  quant_mpeg.cpp  quant_mpeg_sse.c
documentation/: amDCT.doc
misc/: amDCTc.avs
